fix alignment for view button on assets view

--- a/kornell-gwt/src/main/webapp/less/skin.nocache.less
+++ b/kornell-gwt/src/main/webapp/less/skin.nocache.less
@@ -287,7 +287,7 @@ a:hover{
 	}
 
 	.assetsWrapper {
-		.assetModal{
+		.assetModal {
 			top: 140px;
 			textarea {
 				height: 100px;
@@ -296,7 +296,13 @@ a:hover{
 				margin-left: 19px;
 			}
 		}
-		.buttonsBar{
+		.fileUploadPanel {
+			.gwt-Anchor {    
+				padding-top: 9px;
+    			margin-left: 40px;
+			}
+		}
+		.buttonsBar {
 			float: right;
 			.btn {
 				width: 12px;
@@ -335,7 +341,7 @@ a:hover{
 			font-size: 14px;
 	    	line-height: 23px;
 		}
-		.gwt-Anchor {
+		.faLink {
 			float: right;
 	    	margin-bottom: 5px;
 	    	margin-right: 12px;
